ecmascript/parser/tests/typescript-errors/tsc/classes/indexMemberDeclarations/staticIndexers/input.ts.stderr
error: Expected ], got :
 --> $DIR/tests/typescript-errors/tsc/classes/indexMemberDeclarations/staticIndexers/input.ts:4:14
  |
4 |     static [x: string]: string;
  |              ^

